fix(scripts): harden config downloads and node lifecycle
- skip default private config downloads when a custom config mount is used
- safely reuse UID 10001 runtime directories created under restrictive umasks
- make start and stop commands execute exactly once
- align release config, JAR, and checksum downloads to a single tag
- download configs atomically and reject symbolic-link destinations
- clarify legacy ARM64 CMS limitations and current amd64-only tooling
- add regression coverage for offline mounts, permissions, and reruns